2002-09-05  Mo DeJong  <supermo@bayarea.net>

	* gui/text.tcl (tkTextInsertChar): Sync so that
	highlighted region is deleted in other editors
	when a character is typed.

2002-09-04  Chris Drexler  <ckolumbus@users.sourceforge.net>

	* demo/c++_demo/contrib/perl/sample_client:
	Change hard coded path name of perl so that
	rpm will not complain at install time.

2002-09-04  Mo DeJong  <supermo@bayarea.net>

	* gui/text.tcl (tkTextInsert): Sync other
	editors when pasting into a text widget.
	[Bug 594678]

2002-08-05  Chris Drexler  <ckolumbus@users.sourceforge.net>

	* configure: Regen.
	* configure.in: Avoid evaluating ${prefix} or
	${exec_prefix} in variables passed into the
	Makefiles. This will better support setting
	the prefix or exec_prefix and install time.

2002-07-30  Mo DeJong  <supermo@bayarea.net>

	* tcl_configure.patch: Remove patch since
 	it has been committed to the CVS.

2002-07-30  Mo DeJong  <supermo@bayarea.net>

	* gui/editorpane.tcl (filter): Sort symbols before
	inserting them into the editor combo box. This
	reverses an accidental gui change introduced
	in 5.0 as part of the combo rewrite.
	[Bug 579570]

2002-07-29  Mo DeJong  <supermo@bayarea.net>

	* gui/mkfilegen.tcl (WriteRuleTarget): Escape
	variable name that is meant to be evaluated
	when make is run.
	[Bug 585568]

2002-07-16  Mo DeJong  <supermo@bayarea.net>

	* gui/rcs.tcl (check_in_out): Don't check
	return value of sn_rcs.* methods since they
	do not return booleans and we don't do anything
	with the results of such a check.
	* gui/version.tcl (sn_rcs_lockunlockdel): Use
	treebind method of the Selector& class, the
	bind method was removed long ago.
	[Bug 570492]

2002-07-14  Mo DeJong  <supermo@bayarea.net>

	* gui/editorpane.tcl (proceed_gotoline): Save
	and reset the -linenumber_var value before hiding
	the goto line dialog since this invokes Focus_In
	and changes the value. This was causing the Win32
	version to fail.
	[Bug 579168]
